Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54609

Malformed input file crashes moc

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.2
    • 5.6.0, 5.7.0
    • Build tools: moc
    • Ubuntu 16.04 LTS 64 bit
    • 34de4f6a157ac10a434b719f41a06b4293023b29

      moc exits with a failed assert when run on the attached malformed file:

      ASSERT: "uint(i) < uint(size())" in file ../../../include/QtCore/../../../../../src/qt-5.7.0/qtbase/src/corelib/tools/qbytearray.h, line 480
      

      It's clear that moc can't generate something useful from this file but still it should not crash. Qt 5.6.1 finished safely with an error message:

      ""
      crashmoc.h:2: Error: Unexpected character in macro argument list.
      

      This is not a duplicate of QTBUG-53441 which is fixed in 5.7.0.

        1. crashmoc.h
          0.0 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ogoffart Olivier Goffart (Woboq GmbH)
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes